apply plugin: 'com.android.application'

android {
    namespace 'com.github.tvbox.osc'

    compileSdkVersion 36

    defaultConfig {
        applicationId 'com.github.tvbox.osc'

        minSdkVersion 26
        targetSdkVersion 36
        versionCode 1
        versionName '1.0.0'
        multiDexEnabled true

        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }

    packagingOptions {
        exclude 'META-INF/DEPENDENCIES'
    }

    flavorDimensions "mode"
    productFlavors {
        normal {
            dimension "mode"
            minSdkVersion 26
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }

        python {
            dimension "mode"
            minSdkVersion 26
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro', 'proguard-python.pro'
        }
    }

    buildTypes {
        debug {
            minifyEnabled false

            ndk {
                abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
            }
        }
        release {
            minifyEnabled true

            ndk {
                abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
            }
        }
    }

    splits {
        abi {
            enable false
        }
    }

    applicationVariants.configureEach { variant ->
        variant.outputs.configureEach { output ->
            def flavorNames = variant.productFlavors.collect { it.name == "normal" ? "java" : it.name }.join('-')
            def fileName = "TVBox_${variant.buildType.name}-${flavorNames}.apk"
            outputFileName = fileName
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    buildFeatures {
        aidl = true
    }

    lintOptions {
        checkReleaseBuilds false
        abortOnError false
    }
}

repositories {

}

dependencies {
    api fileTree(dir: "libs", include: ["*.jar", "*.aar"])

    api 'wang.harlon.quickjs:wrapper-android:3.2.3'
    implementation 'org.nanohttpd:nanohttpd:2.3.1'
    implementation 'com.google.zxing:core:3.5.4'
    implementation 'com.google.android.material:material:1.13.0'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    annotationProcessor 'androidx.room:room-compiler:2.8.4'
    implementation 'androidx.room:room-runtime:2.8.4'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'com.squareup.okio:okio:3.16.4'
    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.45-androidx'
    implementation 'com.kingja.loadsir:loadsir:1.3.8'
    //noinspection GradleDependency: Newer version not compatible with 'com.orhanobut:hawk'
    implementation 'com.google.code.gson:gson:2.8.7'
    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'me.jessyan:autosize:1.2.1'
    implementation('com.thoughtworks.xstream:xstream:1.4.21') {
        exclude group: 'xmlpull', module: 'xmlpull'
    }
    implementation 'org.greenrobot:eventbus:3.3.1'
    implementation 'com.orhanobut:hawk:2.0.1'
    implementation project(":player")
    pythonImplementation project(":pyramid")
    implementation 'com.lzy.net:okgo:3.0.4'
    implementation 'com.owen:tv-recyclerview:3.0.0'
    implementation 'org.jsoup:jsoup:1.21.2'
    implementation 'com.github.hedzr:android-file-chooser:v1.2.0-final'
    implementation 'commons-io:commons-io:2.16.1'
    implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
    implementation('com.google.net.cronet:cronet-okhttp:0.1.0')
    implementation 'org.brotli:dec:0.1.2'
}
